samples/_failures_safe/1761351781_c8ec27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e59043e.c: In function ‘main’:
./samples/SAFE/__tmp_2e59043e.c:153:21: error: expected expression at end of input
  153 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_2e59043e.c:153:21: error: too few arguments to function ‘print_matrix’
./samples/SAFE/__tmp_2e59043e.c:55:6: note: declared here
   55 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_2e59043e.c:153:21: error: expected declaration or statement at end of input
  153 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_2e59043e.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e59043e.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2e59043e.c:153:21: error: expected declaration or statement at end of input
